force-app/main/default/objects/Positions__c/Positions__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar las posiciones de una empresa</description>
    <label>Position</label>
    <nameField>
        <label>Positions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>