force-app/main/default/objects/Positions__c/fields/Nivel_de_estudios__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_estudios__c</fullName>
    <label>Nivel de estudios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin especificar</fullName>
                <default>true</default>
                <label>Sin especificar</label>
            </value>
            <value>
                <fullName>Secundario</fullName>
            </value>
            <value>
                <fullName>Terciario</fullName>
            </value>
            <value>
                <fullName>Universitario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>