force-app/main/default/objects/Positions__c/fields/Nivel_de_UML__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_UML__c</fullName>
    <label>Nivel de UML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>