force-app/main/default/objects/Positions__c/fields/Salario_de_la_posicion__c.field-meta.xml
<CustomField>
    <fullName>Salario_de_la_posicion__c</fullName>
    <label>Salario de la posicion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>