force-app/main/default/objects/Positions__c/fields/Tecnologia_de_desarrollo__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia_de_desarrollo__c</fullName>
    <label>Tecnologia de desarrollo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>