force-app/main/default/objects/Positions__c/recordTypes/Desarrolladores.recordType-meta.xml
<RecordType>
    <fullName>Desarrolladores</fullName>
    <active>true</active>
    <label>Desarrolladores</label>
</RecordType>